# swiftlink

./: .gitignore  Cargo.toml  README.md  index.html  styles.css
.github/workflows/: docs.yml  release.yml  rust-ci.yml  rust.yml  swiftlink.yml
docs/: mkdocs.yml
docs/content/: contributing.md  getting-started.md  index.md  roadmap.md
docs/content/api/: endpoints.md  index.md
docs/content/server/: configuration.md
example/: config.toml
exmaple/: config.toml
site/: index.html
src/: main.rs
swiftclient/: Cargo.toml  README.md
swiftclient/src/: main.rs
swiftlink-api/: Cargo.toml  README.md
swiftlink-api/src/: client_async.rs  client_blocking.rs  error.rs  lib.rs  request_types.rs
swiftlink-server/: Cargo.toml
swiftlink-server/src/: main.rs
