[package]
name = "swiftlink"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/walker84837/swiftlink"
rust-version = "1.85.0"
# categories = []
# keywords = []

[profile.release]
strip = true
lto = true
overflow-checks = true
panic = "abort"
opt-level = 3

[dependencies]
actix-web = { version = "4.10.2", features = ["rustls"] }
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
log = "0.4.26"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "tls-rustls"] }
thiserror = "2.0.12"
toml = "0.8.20"
