[workspace]
members = [
    "swiftlink-server",
    "swiftlink-api",
    "swiftclient",
]

[workspace.package]
version = "0.0.2"
edition = "2024"
repository = "https://github.com/walker84837/swiftlink"
rust-version = "1.85.0"
description = "Swiftlink is a fast, flexible URL shortener. With a simple API, it transforms long URLs into short, shareable links: shortening made simple!"
license = "Apache-2.0 OR MIT"
categories = ["web-programming", "database", "authentication", "caching", "command-line-interface"]
keywords = ["url-shortening", "web-server", "postgresql", "actix-web", "cli-configuration"]

[workspace.dependencies]
actix-web = { version = "4.10.2", features = ["rustls"] }
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
log = "0.4.26"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "tls-rustls"] }
thiserror = "2.0.12"
toml = "0.8.20"
url = "2.5.4"