[workspace]
members = [
    "swiftlink-server",
    "swiftlink-api",
    "swiftclient",
]

[workspace.package]
version = "0.0.2"
edition = "2024"
repository = "https://github.com/walker84837/swiftlink"
rust-version = "1.85.0"
description = "Swiftlink is a fast, flexible URL shortener. With a simple API, it transforms long URLs into short, shareable links: shortening made simple!"
license = "Apache-2.0 OR MIT"
categories = ["web-programming", "database", "authentication", "caching", "command-line-interface"]
keywords = ["url-shortening", "web-server", "postgresql", "actix-web", "cli-configuration"]

[profile.release]
strip = true
lto = true
overflow-checks = true
panic = "abort"
opt-level = 3