[package]
name = "swiftlink-api"
version = "0.0.2"
edition = "2024"

[features]
async = ["reqwest", "tokio"]
blocking = ["reqwest"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12", optional = true, features = ["json", "blocking"] }
tokio = { version = "1", optional = true, features = ["full"] }
thiserror = "2.0.12"