[package]
name = "swiftlink-server"
version = "0.0.2"
edition = "2024"


[dependencies]
actix-web = { version = "4.10.2", features = ["rustls"] }
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
log = "0.4.26"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "sqlite", "tls-rustls"] }
thiserror = "2.0.12"
toml = "0.8.20"
url = "2.5.4"
swiftlink-api = { path = "../swiftlink-api", features = ["async"] }